# bdffont-python

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  publish.yml
assets/damaged/: illegal_word_in_char.bdf  illegal_word_in_font.bdf  incorrect_chars_count.bdf  incorrect_properties_count.bdf  no_line_bbx.bdf  no_line_chars.bdf  no_line_dwidth.bdf  no_line_encoding.bdf  no_line_end_char.bdf  no_line_end_font.bdf  no_line_end_properties.bdf  no_line_font.bdf  no_line_fontboundingbox.bdf  no_line_size.bdf  no_line_swidth.bdf  unsupported_version.bdf
assets/demo/: demo.bdf
examples/: create.py  load.py
src/bdffont/: error.py  font.py  glyph.py  properties.py
tests/: test_font.py  test_glyph.py  test_load_save.py  test_parse_dump.py  test_properties.py
tests/conformance/: test_damaged.py  test_load_save.py  test_parse_dump.py
