[project]
name = "bdffont"
version = "0.0.40"
description = "A library for handling Glyph Bitmap Distribution Format (BDF) Fonts"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "TakWolf" },
]
maintainers = [
    { name = "TakWolf" },
]
keywords = ["bdf", "font"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.urls]
Homepage = "https://github.com/TakWolf/bdffont-python"
Source = "https://github.com/TakWolf/bdffont-python"
Issues = "https://github.com/TakWolf/bdffont-python/issues"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
